# vibeProcessBar

./: .gitignore  API.md  BUILD_INSTRUCTIONS.txt  BUILD_WINDOWS.md  CHANGELOG.md  LICENSE  README.md  README_zh-CN.md  USAGE.md  WINDOWS_CHANGES.md  WINDOWS_QUICK_START.md  build-macos.sh  build-tauri.sh  build-windows.ps1  build-windows.sh  index.html  package-lock.json  package.json  test-api.sh  test-multi-task.sh  tsconfig.json  vitest.config.ts
.github/workflows/: basic_release.yml  ci.yml  release.yml
.kiro/hooks/: vibe-progress-complete.json  vibe-progress-start.json
.kiro/hooks/scripts/: vibe-report.sh
openspec/: project.md
openspec/changes/add-core-logging/: design.md  proposal.md  tasks.md
openspec/changes/add-i18n-support/: design.md  proposal.md  tasks.md
openspec/changes/add-vibe-coding-progress-bar/: design.md  proposal.md  tasks.md
openspec/changes/add-vscode-integration/: proposal.md  tasks.md
openspec/changes/refactor-to-http-api/: design.md  proposal.md  tasks.md
openspec/specs/vscode-agent/: spec.md
public/locales/ar/: translation.json
public/locales/de/: translation.json
public/locales/en/: translation.json
public/locales/es/: translation.json
public/locales/fr/: translation.json
public/locales/ja/: translation.json
public/locales/ko/: translation.json
public/locales/pt/: translation.json
rules/: on-agent-complete.sh  on-agent-start.sh  rules.md  vibe-hook-mode.md  vibe-mcp-mode.md
src/: App.css  App.tsx  App.vue  index.css  main.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/schema/: v1.sql
src-tauri/src/: db.rs  http_server.rs  main.rs  settings.rs  window_manager.rs
src-tauri/src/plugins/: status_reporter.rs
src/components/: LanguageSelector.tsx  LanguageSelector.vue  ProgressBar.css  ProgressBar.tsx  SettingsPanel.css  SettingsPanel.tsx  SettingsPanel.vue  StatusText.css  StatusText.tsx  StatusText.vue  VSCodeStatus.tsx
src/hooks/: useProgressEvent.ts
src/stores/: progressStore.test.ts  progressStore.ts
src/utils/: adapters.ts  i18n.ts  logger.ts  notifications.ts  system.ts  windowManager.ts
tests/: progressStore.test.ts  setup.ts
tests/__mocks__/: @tauri-apps-api.ts
vscode-extension/: package.json  tsconfig.json
vscode-extension/src/: extension.ts  protocol.ts  types.ts
(+28 files in other folders)
