[package]
name = "vibe-process-bar"
version = "0.1.0"
description = "A floating progress bar for AI-assisted coding"
authors = ["vibe"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webbrowser = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
lazy_static = "1.4"
chrono = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
