[package]
name = "vibe-process-bar"
version = "0.1.0"
description = "A floating progress bar for AI-assisted coding"
authors = ["vibe"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webbrowser = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
lazy_static = "1.4"
chrono = "0.4"
window-vibrancy = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
image = "0.25"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
